Removed asides with audio and navigation.  I wasn't sure what to do with the div id below it yet, so I have left it.  It will probably be removed though.

--- a/DancerDonnaProject5/assessment.html
+++ b/DancerDonnaProject5/assessment.html
@@ -8,8 +8,7 @@
 	</head>	
 	<body>
 		<header>
-			<img src="images/header.png" alt="Online Learning Module - IST 5313 Final Project Template Graphic Header"
-				title="Online Learning Module - IST 5313 Final Project Template Graphic Header"/>
+			<h1>Quiz</h1>
 		</header>
 		<section id="main-content">
 			<article id="main-info">
@@ -38,23 +37,6 @@
 					
 			</article>
 			
-			<aside id="aside-info">
-				<header>
-					<p id="aside-title-audio">Audio</p>
-				</header>
-					<audio controls="none" autoplay="autoplay" >
-						<source src="audio/people113.mp3" type="audio/mp3">
-						<source src="audio/people113.ogv" type="audio/ogg">
-						Your browser does not support the audio tag.
-					</audio>
-					<br/>
-				<header>
-					<p id="aside-title-audio">Transcript</p>
-				</header>
-				<div id="transcript">
-					Take the test and click submit.
-				</div>
-			</aside>
 			<div id="main-content-clear"></div>
 		</section>
 		
