--- a/DancerDonnaProject5/topic-3.html
+++ b/DancerDonnaProject5/topic-3.html
@@ -7,8 +7,7 @@
 	</head>	
 	<body>
 		<header>
-			<img src="images/header.png" alt="Online Learning Module - IST 5313 Final Project Template Graphic Header"
-				title="Online Learning Module - IST 5313 Final Project Template Graphic Header"/>
+			<h1>Palau</h1>
 		</header>
 		<section id="main-content">
 			<article id="main-info">
@@ -40,24 +39,6 @@
 				</footer> 
 			</article>
 			
-			<aside id="aside-info">
-				<header>
-					<p id="aside-title-audio">Audio</p>
-					<audio controls="controls" autoplay="autoplay" >
-						<source src="audio/people113.mp3" type="audio/mp3">
-						<source src="audio/people113.ogv" type="audio/ogg">
-						Your browser does not support the audio tag.
-					</audio>
-					<br/>
-				</header>
-				<header>
-					<p id="aside-title-audio">Transcript</p>
-				</header>
-				<div id="transcript">
-				Nullam elementum lorem eu tellus tincidunt sit amet tristique odio mollis. Vestibulum lorem velit, vestibulum malesuada accumsan eget, molestie ullamcorper risus. Nullam tempor malesuada risus, a dapibus purus faucibus et. Ut porta pharetra volutpat. Nam lacinia diam in dui volutpat eu condimentum sapien ultrices. Phasellus erat turpis, sagittis a aliquam eu, facilisis ut lectus. Etiam consectetur libero nec dui pretium hendrerit. Maecenas velit tortor, dignissim et lobortis non, viverra id enim. Ut eu magna dui. Pellentesque est lorem, lacinia a accumsan vel, interdum vel nibh. Curabitur rutrum dictum convallis. Curabitur eget elit eros. Pellentesque est enim, aliquam eu feugiat volutpat, consectetur in metus. Donec quis tellus tristique augue sodales condimentum ac nec tellus.
-				Nullam elementum lorem eu tellus tincidunt sit amet tristique odio mollis. Vestibulum lorem velit, vestibulum malesuada accumsan eget, molestie ullamcorper risus. Nullam tempor malesuada risus, a dapibus purus faucibus et. Ut porta pharetra volutpat. Nam lacinia diam in dui volutpat eu condimentum sapien ultrices. Phasellus erat turpis, sagittis a aliquam eu, facilisis ut lectus. Etiam consectetur libero nec dui pretium hendrerit. Maecenas velit tortor, dignissim et lobortis non, viverra id enim. Ut eu magna dui. Pellentesque est lorem, lacinia a accumsan vel, interdum vel nibh. Curabitur rutrum dictum convallis. Curabitur eget elit eros. Pellentesque est enim, aliquam eu feugiat volutpat, consectetur in metus. Donec quis tellus tristique augue sodales condimentum ac nec tellus.
-				</div>
-			</aside>
 			<div id="main-content-clear"></div>
 			
 		</section>
