changed navigation buttons on topic-1 page

--- a/DancerDonnaProject5/topic-1.html
+++ b/DancerDonnaProject5/topic-1.html
@@ -46,11 +46,11 @@
 			<a href="topic-1b.html" class="sub-menu-link">Sub-topic 1b</a>
 		</nav>
 		<nav id="navigation">
-			<span class="menu-link-inactive">Topic 1</span>
-			<a href="topic-2.html" class="menu-link">Topic 2</a>
-			<a href="topic-3.html" class="menu-link">Topic 3</a>
-			<a href="assessment.html" class="menu-link">Assessment</a>
-			<a href="certificate.html" class="menu-link">Certificate of Completion</a>
+			<span class="menu-link-inactive">Botswana</span>
+			<a href="topic-1.html" class="menu-link">Finland</a>
+			<a href="topic-2.html" class="menu-link">Palau</a>
+			<a href="topic-3.html" class="menu-link">United Arab Emirates</a>
+			<a href="quiz.html" class="menu-link">Quiz</a>
 		</nav>
 
 	</body>
