--- a/DancerDonnaProject5/quiz.html
+++ b/DancerDonnaProject5/quiz.html
@@ -7,9 +7,19 @@
 		<link href="styles/styles.css" rel="stylesheet" type="text/css"/>
 	</head>	
 	<body>
+	
 		<header>
 			<h1>Quiz</h1>
 		</header>
+		
+		<nav id="navigation">
+			<a href="botswana.html" class="menu-link">Botswana</a>
+			<a href="finland.html" class="menu-link">Finland</a>
+			<a href="palau.html" class="menu-link">Palau</a>
+			<a href="uae.html" class="menu-link">United Arab Emirates</a>
+			<a href="quiz.html">Quiz</a>
+		</nav>
+		
 		<section id="main-content">
 			<article id="main-info">
 			
@@ -40,15 +50,5 @@
 			<div id="main-content-clear"></div>
 		</section>
 		
-		<nav id="sub-navigation">
-		</nav>
-		<nav id="navigation">
-			<a href="topic-1.html" class="menu-link">Topic 1</a>
-			<a href="topic-2.html" class="menu-link">Topic 2</a>
-			<a href="topic-3.html" class="menu-link">Topic 3</a>
-			<span class="menu-link-inactive">Assessment</span>
-			<a href="certificate.html" class="menu-link">Certificate of Completion</a>
-		</nav>
-
-	</body>
+		</body>
 </html>
