--- a/DancerDonnaProject5/index.html
+++ b/DancerDonnaProject5/index.html
@@ -9,6 +9,6 @@
 		<link href="styles/styles.css" rel="stylesheet" type="text/css"/>
 	</head>	
 	<frameset cols="100%" target="main" onLoad="javascript:loadOLM()" onUnload="javascript:finishOLM()">
-		<frame src="topic-1.html" name="main"/>
+		<frame src="botswana.html" name="main"/>
 	</frameset>
 </html>
