--- a/trunk/DancerDonnaProject5/palau.html
+++ b/trunk/DancerDonnaProject5/palau.html
@@ -14,10 +14,10 @@
  		</header>
 		
 		<nav id="navigation">
-			<a href="botswana.html" class="menu-link">Botswana</a>
-			<a href="finland.html" class="menu-link">Finland</a>
-			<a href="palau.html" class="menu-link">Palau</a>
-			<a href="uae.html" class="menu-link">United Arab Emirates</a>
+			<a href="botswana.html">Botswana</a>
+			<a href="finland.html">Finland</a>
+			<a href="palau.html">Palau</a>
+			<a href="uae.html">United Arab Emirates</a>
 			<a href="quiz.html" class="quiz-link">Quiz</a>
 		</nav>
 		<section>
