--- a/DancerDonnaProject5/quiz.html
+++ b/DancerDonnaProject5/quiz.html
@@ -12,7 +12,7 @@
 			<h1>Quiz</h1>
 		</header>
 		
-		<nav id="navigation">
+		<nav>
 			<a href="botswana.html">Botswana</a>
 			<a href="finland.html">Finland</a>
 			<a href="palau.html">Palau</a>
