--- a/DancerDonnaProject5/uae.html
+++ b/DancerDonnaProject5/uae.html
@@ -12,7 +12,7 @@
 		<header>
  				<h1>United Arab Emirates (UAE)</h1>
  		</header>
-		<nav id="navigation">
+		<nav>
 			<a href="botswana.html">Botswana</a>
 			<a href="finland.html">Finland</a>
 			<a href="palau.html">Palau</a>
