--- a/trunk/DancerDonnaProject5/botswana.html
+++ b/trunk/DancerDonnaProject5/botswana.html
@@ -11,7 +11,7 @@
 		<header>
  			<h1>Botswana</h1>
  		</header>
-		<nav id="navigation">
+		<nav>
 			<a href="botswana.html">Botswana</a>
 			<a href="finland.html">Finland</a>
 			<a href="palau.html">Palau</a>
