--- a/trunk/DancerDonnaProject5/finland.html
+++ b/trunk/DancerDonnaProject5/finland.html
@@ -13,7 +13,7 @@
  			<h1>Finland</h1>
  		</header>
  		
-		<nav id="navigation">
+		<nav>
 			<a href="botswana.html">Botswana</a>
 			<a href="finland.html">Finland</a>
 			<a href="palau.html">Palau</a>
