--- a/trunk/DancerDonnaProject5/uae-4.html
+++ b/trunk/DancerDonnaProject5/uae-4.html
@@ -7,21 +7,19 @@
 		<script src="scripts/scripts.js" language="javascript"></script>
 		<link href="styles/styles.css" rel="stylesheet" type="text/css"/>
 	</head>	
-	<body onLoad="javascript:visitPalau()">
-		
-		<header>
- 					<h1>Palau</h1>
- 		</header>
-		
+	<body onLoad="javascript:visitUae()">
 		<nav>
-			<a href="botswana.html">Botswana</a>
-			<a href="finland.html">Finland</a>
-			<a href="palau.html">Palau</a>
-			<a href="uae.html">United Arab Emirates</a>
-			<a href="quiz.html" class="quiz-link">Quiz</a>
+			<a href="index.html">Home</a>
+			<a href="botswana-1.html">Botswana</a>
+			<a href="finland-2.html">Finland</a>
+			<a href="palau-3.html">Palau</a>
+			<a href="uae-4.html">United Arab Emirates</a>
+			<a href="quiz.html" id="quiz-link">Quiz</a>
 		</nav>
 		<section>
-		
+		<header>
+ 					<h1>United Arab Emirates (UAE)</h1>
+ 		</header>
  
  				<div id="main-content">
  					<div class="column">
@@ -29,21 +27,21 @@
  						<article>
  		
  							<header>
- 								<h1>Flag of Palau</h1>
+ 								<h1>Flag of UAE</h1>
  							</header>
  		
- 							<img src="graphics/palau.svg" width="300" height="200"
- 							alt="Flag of Palau" title="Flag of Palau"/>
+ 							<img src="graphics/uae.svg" width="300" height="200"
+ 							alt="Flag of UAE" title="Flag of UAE"/>
  						</article>
  				</div>
  				<div class="column">
  					<article>
- 						<header>
- 							<h1>Palau of the Arts</h1>
+ 						<header">
+ 							<h1>UAE City Scape</h1>
  						</header>
  		
- 						<img src="images/palau-de-les-arts.jpg" width="300" height="200"
- 						alt="Palau Arts" title="Palau Arts"/>
+ 						<img src="images/uae-city.jpg" width="300" height="200"
+ 						alt="UAE City Scape" title="UAE City Scape"/>
  						
  					</article>
  				</div>
@@ -51,10 +49,10 @@
 			
 			<aside>
 			
-			<p> A volcanic island nation located in the northern Pacific, east of the Philippines, Palau is a country with a population of 20,000 people. As a territory under </br>
-			US administration, Palau gained its independence in 1993, making it the youngest and least populated nation. The climate is hot, tropical and humid.</br>
-			Part of this nation are 20 large islands and 566 small islands.</p>
-	
+			<p>Formed in 1971, the United Arab Emirates (UAE), is a country with 8.3 million people located in the south east Arabian Peninsula.  It is </br>
+			an oil rich country and is the third largest oil producer in the Persian Gulf region.  Its terrain is mostly desert, with a hot, humid climate, </br>
+			except for the cooler climate in the mountains to the east.  88% of the population is not UAE nationals.</p>
+			
 			</aside>
 	</br>
 	</br>
@@ -73,6 +71,7 @@
  			This page best viewed on Firefox v. 15+
  			</cite>
  		</footer>
+
 	</body>
 
 </html>
