Renamed files to match Project 4, since that was successful for me last time.  I did not rename Topic 1, which is the home page, since we are not allowed to modify the index.html file.  Fixed JavaScript display quiz function that wasn't working.  Removed the SCORM info from JavaScript page, since it is not part of this project and made it cluttered with no purpose.  Renamed my function to startCourse, since that worked for me last time and is logical.

--- a/DancerDonnaProject5/index.html
+++ b/DancerDonnaProject5/index.html
@@ -9,6 +9,6 @@
 		<link href="styles/styles.css" rel="stylesheet" type="text/css"/>
 	</head>	
 	<frameset cols="100%" target="main" onLoad="javascript:loadOLM()" onUnload="javascript:finishOLM()">
-		<frame src="botswana.html" name="main"/>
+		<frame src="topic-1.html" name="main"/>
 	</frameset>
 </html>
