--- a/trunk/DancerDonnaProject5/botswana-1.html
+++ b/trunk/DancerDonnaProject5/botswana-1.html
@@ -8,7 +8,7 @@
 		<link href="styles/styles.css" rel="stylesheet" type="text/css"/>
 	</head>	
 	<body onLoad="javascript:visitBotswana()"">
-		<nav>
+		<nav id="navigation">
 			<a href="index.html">Home</a>
 			<a href="botswana-1.html">Botswana</a>
 			<a href="finland-2.html">Finland</a>
@@ -18,6 +18,8 @@
 		</nav>
 		
 		<section>
+		</br>
+		</br>
 		<header>
  					<h1>Botswana</h1>
  				</header>
