--- a/trunk/DancerDonnaProject5/quiz.html
+++ b/trunk/DancerDonnaProject5/quiz.html
@@ -8,7 +8,7 @@
 		<link href="styles/styles.css" rel="stylesheet" type="text/css"/>
 	</head>	
 	<body onLoad="javascript:startCourse();javascript:visitHome()">
-		<nav>
+		<nav id="navigation">
 			<a href="index.html">Home</a>
 			<a href="botswana-1.html">Botswana</a>
 			<a href="finland-2.html">Finland</a>
@@ -17,6 +17,8 @@
 			<a href="quiz.html">Quiz</a>
 		</nav>
 	<section>
+	</br>
+	</br>
 			<header>
 				<h1>Quiz</h1>
 			</header>
