--- a/trunk/DancerDonnaProject5/topic-1.html
+++ b/trunk/DancerDonnaProject5/topic-1.html
@@ -8,7 +8,7 @@
 		<link href="styles/styles.css" rel="stylesheet" type="text/css"/>
 	</head>	
 	<body onLoad="javascript:startCourse();javascript:visitHome()">
-		<nav>
+		<nav id="navigation">
 			<a href="index.html">Home</a>
 			<a href="botswana-1.html">Botswana</a>
 			<a href="finland-2.html">Finland</a>
@@ -17,10 +17,13 @@
 			<a href="quiz.html" id="quiz-link">Quiz</a>
 		</nav>
 		
+	<section>
+	</br>
+	</br>
 	<header>
-	<section></section>
+
 	<h1>Welcome!</h1>
-	
+
 	</header>
 	
 	<p>On this website you will learn about four countries of the world!</p>
