--- a/DancerDonnaProject5/uae-4.html
+++ b/DancerDonnaProject5/uae-4.html
@@ -8,7 +8,7 @@
 		<link href="styles/styles.css" rel="stylesheet" type="text/css"/>
 	</head>	
 	<body onLoad="javascript:visitUae()">
-		<nav>
+		<nav id="navigation">
 			<a href="index.html">Home</a>
 			<a href="botswana-1.html">Botswana</a>
 			<a href="finland-2.html">Finland</a>
@@ -17,6 +17,8 @@
 			<a href="quiz.html" id="quiz-link">Quiz</a>
 		</nav>
 		<section>
+		</br>
+		</br>
 		<header>
  					<h1>United Arab Emirates (UAE)</h1>
  		</header>
