--- a/trunk/DancerDonnaProject5/quiz.html
+++ b/trunk/DancerDonnaProject5/quiz.html
@@ -9,12 +9,12 @@
 	</head>	
 	<body onLoad="javascript:startCourse();javascript:visitHome()">
 		<nav id="navigation">
-			<a href="index.html">Home</a>
-			<a href="botswana-1.html">Botswana</a>
-			<a href="finland-2.html">Finland</a>
-			<a href="palau-3.html">Palau</a>
-			<a href="uae-4.html">United Arab Emirates</a>
-			<a href="quiz.html">Quiz</a>
+			<a href="index.html" class="menu-link">Home</a>
+			<a href="botswana-1.html" class="menu-link">Botswana</a>
+			<a href="finland-2.html" class="menu-link">Finland</a>
+			<a href="palau-3.html" class="menu-link">Palau</a>
+			<a href="uae-4.html" class="menu-link">United Arab Emirates</a>
+			<span class="menu-link-inactive">Quiz</span>
 		</nav>
 	<section>
 	</br>
