Added more styling to CSS, changed font family, font size, added hover color, added class to CSS to enable the changes.

--- a/DancerDonnaProject5/palau-3.html
+++ b/DancerDonnaProject5/palau-3.html
@@ -9,12 +9,12 @@
 	</head>	
 	<body onLoad="javascript:visitPalau()">
 		<nav id="navigation">
-			<a href="index.html">Home</a>
-			<a href="botswana-1.html">Botswana</a>
-			<a href="finland-2.html">Finland</a>
-			<a href="palau-3.html">Palau</a>
-			<a href="uae-4.html">United Arab Emirates</a>
-			<a href="quiz.html" id="quiz-link">Quiz</a>
+			<a href="index.html" class="menu-link">Home</a>
+			<a href="botswana-1.html" class="menu-link">Botswana</a>
+			<a href="finland-2.html" class="menu-link">Finland</a>
+			<span class="menu-link-inactive">Palau</span>
+			<a href="uae-4.html" class="menu-link">United Arab Emirates</a>
+			<a href="quiz.html" class="menu-link" id="quiz-link">Quiz</a>
 		</nav>
 		<section>
 		</br>
