--- a/trunk/DancerDonnaProject5/finland-2.html
+++ b/trunk/DancerDonnaProject5/finland-2.html
@@ -66,11 +66,10 @@
 	</br>
 	</br>
 	</br>
-	</br>
 	<footer>
  			<cite>
- 			The flag images are author created images.  The country images were retrieved from <a href="http://www.creativecommons.org">Creative Commons</a>.</br>
- 			The country information was retrieved from <a href="http://www.nationsonline.org"> Nations Online</a></br>
+ 			The flag images are author created images.  The country images were retrieved from <a class="footer-link" href="http://www.creativecommons.org" class="footer-link">Creative Commons</a>.</br>
+ 			The country information was retrieved from <a class="footer-link" href="http://www.nationsonline.org"> Nations Online</a></br>
  			This page best viewed on Firefox v. 15+
  			</cite>
  		</footer>
