--- a/trunk/DancerDonnaProject5/topic-1.html
+++ b/trunk/DancerDonnaProject5/topic-1.html
@@ -27,7 +27,7 @@
 	</header>
 	
 	<section>
-	<p>On this website you will learn about four countries of the world!  Click on the links above to visit each country.</br>
+	<p>On this website you will learn about four countries of the world!  Click on the navigation links above to visit each country.</br>
 	After you have visited each country, you may take the quiz.  Good Luck!</p>
 	
  					<div class="column-home">
